--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
                 <svg class="icon" aria-hidden="true">
                     <use xlink:href="#icon-iconfontmingpian"></use>
                 </svg>
-                <span>13322211110</span>
+                <span></span>
             </header>
             <div class="main-body" id="home-md"></div>
         </div>
@@ -173,7 +173,7 @@
         <div class="container px-5">
             <div class="text-white-50 small">
                 <div id="copyright-text" class="mb-2"></div>
-                <a id="github-link" href="###">Github</a>
+                <a id="github-link" href="###">Github</a
                 <!-- 占位用以GitHub网站 -->
                 <span class="mx-1">&middot;</span>
                 <a id="license-link" href="###">Email</a>
