--- a/Personal Profile/index.html
+++ b/Personal Profile/index.html
@@ -97,6 +97,9 @@
                         <a class="nav-link me-lg-3" href="#page-top">主页</a>
                     </li>
                     <li class="nav-item">
+                        <a class="nav-link me-lg-3" href="#grants">GRANTS</a>
+                    </li>
+                    <li class="nav-item">
                         <a class="nav-link me-lg-3" href="#publications">PUBLICATIONS</a>
                     </li>
                     <li class="nav-item">
@@ -184,5 +187,6 @@
     </footer>
 
 </body>
+
 
 </html>
