--- a/Personal Profile/index.html
+++ b/Personal Profile/index.html
@@ -146,6 +146,18 @@
     </section>
     <!-- Home -->
 
+    <!-- grants -->
+    <section class="bg-gradient-primary-to-secondary-gray mt5 md5" id="grants">
+        <div class="container px-5">
+            <header>
+                <h2 id="grants-subtitle"><i class="bi bi-file-text-fill"></i>&nbsp;GRANTS</h2>
+            </header>
+            <div class="main-body" id="grants-md"></div>
+
+        </div>
+    </section>
+    <!-- grants  -->
+    
     <!-- Publications -->
     <section class="bg-gradient-primary-to-secondary-gray mt5 md5" id="publications">
         <div class="container px-5">
@@ -190,3 +202,4 @@
 
 
 </html>
+
