--- a/index.html
+++ b/index.html
@@ -97,6 +97,9 @@
                         <a class="nav-link me-lg-3" href="#page-top">主页</a>
                     </li>
                     <li class="nav-item">
+                        <a class="nav-link me-lg-3" href="#grants">GRANTS</a>
+                    </li>
+                    <li class="nav-item">
                         <a class="nav-link me-lg-3" href="#publications">PUBLICATIONS</a>
                     </li>
                     <li class="nav-item">
@@ -121,7 +124,7 @@
     <!-- Photo -->
     <div class="container px-5">
         <div id="avatar">
-            <img class="shadow" src="static/assets/img/photo.jpg">
+            <img class="shadow" src="static/assets/img/photo.png">
         </div>
     </div>
     <!-- Photo -->
@@ -135,14 +138,26 @@
                 <!-- <span class="bi bi-list"></span> -->
                 <svg class="icon" aria-hidden="true">
                     <use xlink:href="#icon-iconfontmingpian"></use>
-<!--                 </svg>
-                <span>13322211110</span> -->
+                </svg>
+                <span>13322211110</span>
             </header>
             <div class="main-body" id="home-md"></div>
         </div>
     </section>
     <!-- Home -->
 
+    <!-- grants -->
+    <section class="bg-gradient-primary-to-secondary-gray mt5 md5" id="grants">
+        <div class="container px-5">
+            <header>
+                <h2 id="grants-subtitle"><i class="bi bi-file-text-fill"></i>&nbsp;GRANTS</h2>
+            </header>
+            <div class="main-body" id="grants-md"></div>
+
+        </div>
+    </section>
+    <!-- grants  -->
+    
     <!-- Publications -->
     <section class="bg-gradient-primary-to-secondary-gray mt5 md5" id="publications">
         <div class="container px-5">
@@ -173,7 +188,7 @@
         <div class="container px-5">
             <div class="text-white-50 small">
                 <div id="copyright-text" class="mb-2"></div>
-                <a id="github-link" href="###">Github</a
+                <a id="github-link" href="###">Github</a>
                 <!-- 占位用以GitHub网站 -->
                 <span class="mx-1">&middot;</span>
                 <a id="license-link" href="###">Email</a>
@@ -185,4 +200,7 @@
 
 </body>
 
+
 </html>
+
+
